# onnx-inference-engine

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakePresets.json  ENGINEERING_PLAN.md  FIX_PROMPT.md  Makefile  PROJECT_AUDIT.md  PROJECT_EXPLAINER.md  README.md  WRITEUP.md  docker-compose.yml  prometheus.yml  render.yaml  vercel.json
.github/workflows/: ci-engine.yml  ci-server.yml
.vercel/output/: nitro.json
.vercel/output/functions/__server.func/: _tanstack-start-manifest_v-CIW2TKnr.mjs  index.mjs
.vercel/output/functions/__server.func/_libs/: h3+rou3+srvx.mjs  lodash.mjs  lucide-react.mjs  react+tanstack__react-query.mjs  react-smooth.mjs  recharts+[...].mjs
.vercel/output/functions/__server.func/_libs/@tanstack/: react-router+[...].mjs
.vercel/output/functions/__server.func/_ssr/: Layout-BgUZpOi6.mjs  architecture-DaXdelex.mjs  benchmark-Cdwdao10.mjs  crucible-wasm-DqqGcYC1.mjs  docs-BYl0jFa4.mjs  fraud-DGF4fPaJ.mjs  playground-DG00rt3e.mjs  roadmap-C9BR7jIW.mjs  router-Bsevoe8v.mjs  routes-CfmlYt7E.mjs  server-CI0yXFus.mjs  ssr.mjs  story-CYdigG73.mjs
.vercel/output/static/assets/: Layout-v_KoCKO8.js  architecture-em2-NvKv.js  arrow-right-DMzbeVJp.js  benchmark-Cz8Om96k.js  crucible-DRnn0G9j.css  crucible-wasm-qKIlQbA1.js  docs-BDfhg62r.js  fraud-B4INLhyF.js  index-DH35C8Iz.js  lock-57GYIlUS.js  playground-Di6pzv08.js  roadmap-DraJGp82.js  routes-CIKYlNSs.js  story-Bnh3hBbW.js  styles-QvDWBgX7.css
.vercel/output/static/models/: fraud_detector.onnx
benchmarks/: bench_crucible.py  bench_onnxruntime.py  bench_pytorch.py  run_all.py
benchmarks/results/: .gitkeep  README.md  merge.py
cli/: Cargo.toml
cli/src/: formatter.rs  main.rs  runner.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md
engine/: CMakeLists.txt  CMakePresets.json
engine/benchmarks/: CMakeLists.txt  bench_conv2d.cpp  bench_matmul.cpp
engine/bindings/python/: CMakeLists.txt  crucible_py.cpp
engine/include/crucible/: onnx_parser.hpp  tensor.hpp
engine/include/crucible/ops/: linear.hpp  norm.hpp  pooling.hpp
engine/src/: c_api.cpp  executor.cpp  onnx_parser.cpp  tensor.cpp
engine/src/ops/: .gitkeep  activations.cpp  conv2d.cpp  linear.cpp  norm.cpp  pooling.cpp
engine/tests/: CMakeLists.txt  test_activations.cpp  test_executor.cpp  test_linear.cpp  test_norm.cpp  test_onnx_parser.cpp  test_pooling.cpp  test_smoke.cpp  test_tensor.cpp
engine/tests/fixtures/: chain4.onnx  empty.onnx  gemm.onnx  matmul_add.onnx  reshape.onnx
grafana/provisioning/datasources/: prometheus.yml
lovable-export/: PLACEHOLDER.txt
models/: .gitkeep  download_models.py  generate_fixtures.py
models/fraud/: model_config.json  train_fraud_model.py
monitoring/: prometheus.yml
server/: Dockerfile  __init__.py  alembic.ini  auth.py  config.py  converter.py  database.py  logging_config.py  main.py  metrics.py  models.py  requirements.txt  schemas.py  seed_db.py  test_bindings.py  test_crud.py  validator.py  webhooks.py
server/alembic/: env.py  script.py.mako
server/ml/: prepare_dataset.py  training.py
server/tests/: __init__.py  test_api.py  test_database.py
wasm/src/: lib.rs
web/: .gitignore  eslint.config.mjs  next-env.d.ts  package-lock.json  package.json
web/public/wasm/: crucible_wasm.d.ts  crucible_wasm.js  crucible_wasm_bg.wasm  crucible_wasm_bg.wasm.d.ts
web/scripts/: postbuild.js
web/src/: routeTree.gen.ts
web/src/app/: globals.css  page.tsx
web/src/app/benchmark/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/playground/: page.tsx
web/src/components/: InferenceRunner.tsx  LatencyChart.tsx  ModelUploader.tsx  TensorViewer.tsx
web/src/components/crucible/: Layout.tsx
web/src/hooks/: use-mobile.tsx
web/src/lib/: api.ts  error-page.ts
web/src/routes/: benchmark.tsx  dashboard.tsx  fraud.tsx  playground.tsx
